Respawns + constant 1 unit spawns + fix of a formula

--- a/scenarios/HotS1.cfg
+++ b/scenarios/HotS1.cfg
@@ -1013,6 +1013,157 @@
         {VARIABLE_OP guards add 1}
         {A1BOSSES_KILL_CHECK}
     [/event]
+    
+    #Additional constant 1 unit spawns
+    [event]
+        name=turn refresh
+        first_time_only=no
+        [if]
+            [variable]
+                name=difficulty.overall
+                greater_than=100
+            [/variable]
+            [then]
+                {VARIABLE spawn_chance 8}
+                [if]
+                    [variable]
+                        name=difficulty.overall
+                        greater_than=300
+                    [/variable]
+                    [then]
+                        {VARIABLE_OP spawn_chance sub 1}
+                    [/then]
+                [/if]
+                [if]
+                    [variable]
+                        name=difficulty.overall
+                        greater_than=500
+                    [/variable]
+                    [then]
+                        {VARIABLE_OP spawn_chance sub 1}
+                    [/then]
+                [/if]
+                [if]
+                    [variable]
+                        name=difficulty.overall
+                        greater_than=700
+                    [/variable]
+                    [then]
+                        {VARIABLE_OP spawn_chance sub 1}
+                    [/then]
+                [/if]
+                [if]
+                    [variable]
+                         name=difficulty.overall
+                         greater_than=900
+                    [/variable]
+                    [then]
+                        {VARIABLE_OP spawn_chance sub 1}
+                    [/then]
+                [/if]
+                [if]
+                    [variable]
+                        name=difficulty.overall
+                        greater_than=1200
+                    [/variable]
+                    [then]
+                        {VARIABLE_OP spawn_chance sub 1}
+                    [/then]
+                [/if]
+                [if]
+                    [variable]
+                        name=difficulty.overall
+                        greater_than=1500
+                    [/variable]
+                    [then]
+                        {VARIABLE_OP spawn_chance sub 1}
+                    [/then]
+                [/if]
+                [if]
+                    [variable]
+                        name=difficulty.overall
+                        greater_than=2000
+                    [/variable]
+                    [then]
+                        {VARIABLE_OP spawn_chance sub 1}
+                    [/then]
+                [/if]
+                {VARIABLE_OP did_spawn rand "1..$spawn_chance"}
+                [if]
+                    [variable]
+                        name=did_spawn
+                        equals=1
+                    [/variable]
+                    [then]
+                        [if]
+                            [variable]
+                                name=difficulty.overall
+                                greater_than=1300
+                            [/variable]
+                            [then]
+                                {VARIABLE_OP spawn_type rand (Orcish Warlord,Orcish Warrior,Orcish Slurbow,Orcish Crossbowman,Orcish Assassin,Orcish Slayer)}
+                            [/then]
+                            [else]
+                                {VARIABLE_OP spawn_type rand (Orcish Grunt,Orcish Warrior,Orcish Archer,Orcish Crossbowman,Orcish Assassin,Orcish Slayer)}
+                            [/else]
+                        [/if]
+                        {VARIABLE_OP spawn_x rand (24..31)}
+                        {VARIABLE_OP spawn_y rand (89..94)}
+                        {GENERIC_UNIT 8 $spawn_type $spawn_x $spawn_y}
+                    [/then]
+                [/if]
+                {VARIABLE_OP did_spawn rand "1..$spawn_chance"}
+                [if]
+                    [variable]
+                        name=did_spawn
+                        equals=1
+                    [/variable]
+                    [then]
+                        [if]
+                            [variable]
+                                name=difficulty.overall
+                                greater_than=1500
+                            [/variable]
+                            [then]
+                                {VARIABLE_OP spawn_type rand (Draug,Death Knight,Banebow,Revenant,Bone Shooter,Deathblade,Ghast,Necrophage,Reaper,Wraith,Shadow)}
+                            [/then]
+                            [else]
+                                {VARIABLE_OP spawn_type rand (Skeleton,Skeleton Archer,Revenant,Bone Shooter,Deathblade,Ghoul,Necrophage,Ghost,Wraith,Shadow)}
+                            [/else]
+                        [/if]
+                        {VARIABLE_OP spawn_x rand (1..6)}
+                        {VARIABLE_OP spawn_y rand (20..24)}
+                        {GENERIC_UNIT 8 $spawn_type $spawn_x $spawn_y}
+                    [/then]
+                [/if]
+                {VARIABLE_OP did_spawn rand "1..$spawn_chance"}
+                [if]
+                    [variable]
+                        name=did_spawn
+                        equals=1
+                    [/variable]
+                    [then]
+                        [if]
+                            [variable]
+                                name=difficulty.overall
+                                greater_than=1700
+                            [/variable]
+                            [then]
+                                {VARIABLE_OP spawn_type rand (Troll Warior,Troll Shaman,Troll Whelp,Great Troll)}
+                            [/then]
+                            [else]
+                                {VARIABLE_OP spawn_type rand (Troll,Troll Shaman,Troll Whelp)}
+                            [/else]
+                        [/if]
+                        {VARIABLE_OP spawn_x rand (91..98)}
+                        {VARIABLE_OP spawn_y rand (16..20)}
+                        {GENERIC_UNIT 8 $spawn_type $spawn_x $spawn_y}
+                    [/then]
+                [/if]
+            [/then]
+        [/if]
+    [/event]
+    {RESET_FREE_SPAWNS 1}
 
 [/scenario]
 #undef A1BOSSES_KILL_CHECK
