--- a/scenarios/HotS2.cfg
+++ b/scenarios/HotS2.cfg
@@ -981,5 +981,182 @@
         {VARIABLE_OP seals add 1}
         {A2BOSSES_KILL_CHECK}
     [/event]
+    
+    #Additional constant 1 unit spawns
+    [event]
+        name=turn refresh
+        first_time_only=no
+        [if]
+            [variable]
+                name=difficulty.overall
+                greater_than=200
+            [/variable]
+            [then]
+                {VARIABLE spawn_chance 8}
+                [if]
+                    [variable]
+                        name=difficulty.overall
+                        greater_than=500
+                    [/variable]
+                    [then]
+                        {VARIABLE_OP spawn_chance sub 1}
+                    [/then]
+                [/if]
+                [if]
+                    [variable]
+                        name=difficulty.overall
+                        greater_than=800
+                    [/variable]
+                    [then]
+                        {VARIABLE_OP spawn_chance sub 1}
+                    [/then]
+                [/if]
+                [if]
+                    [variable]
+                        name=difficulty.overall
+                        greater_than=1100
+                    [/variable]
+                    [then]
+                        {VARIABLE_OP spawn_chance sub 1}
+                    [/then]
+                [/if]
+                [if]
+                    [variable]
+                         name=difficulty.overall
+                         greater_than=1500
+                    [/variable]
+                    [then]
+                        {VARIABLE_OP spawn_chance sub 1}
+                    [/then]
+                [/if]
+                [if]
+                    [variable]
+                        name=difficulty.overall
+                        greater_than=2000
+                    [/variable]
+                    [then]
+                        {VARIABLE_OP spawn_chance sub 1}
+                    [/then]
+                [/if]
+                [if]
+                    [variable]
+                        name=difficulty.overall
+                        greater_than=2500
+                    [/variable]
+                    [then]
+                        {VARIABLE_OP spawn_chance sub 1}
+                    [/then]
+                [/if]
+                [if]
+                    [variable]
+                        name=difficulty.overall
+                        greater_than=3500
+                    [/variable]
+                    [then]
+                        {VARIABLE_OP spawn_chance sub 1}
+                    [/then]
+                [/if]
+                {VARIABLE_OP did_spawn rand "1..$spawn_chance"}
+                [if]
+                    [variable]
+                        name=did_spawn
+                        equals=1
+                    [/variable]
+                    [then]
+                        {VARIABLE_OP spawn_type rand (Corrupted Orcish Grunt,Corrupted Orcish Grunt,Corrupted Orcish Assassin,Corrupted Orcish Assassin,Corrupted Orcish Warrior,Corrupted Orcish Slayer,Spell Eater)}
+                        {VARIABLE_OP spawn_x rand (131..146)}
+                        {VARIABLE_OP spawn_y rand (6..18)}
+                        {GENERIC_UNIT 7 $spawn_type $spawn_x $spawn_y}
+                    [/then]
+                [/if]
+                {VARIABLE_OP did_spawn rand "1..$spawn_chance"}
+                [if]
+                    [variable]
+                        name=did_spawn
+                        equals=1
+                    [/variable]
+                    [then]
+                        [if]
+                            [variable]
+                                name=difficulty.overall
+                                greater_than=2200
+                            [/variable]
+                            [then]
+                                {VARIABLE_OP spawn_type rand (Corrupted Elvish Fighter,Corrupted Elvish Fighter,Corrupted Elvish Fighter,Corrupted Elvish Scout,Corrupted Elvish Scout,Corrupted Elvish Scout,Corrupted Elvish Hero,Corrupted Elvish Captain,Spell Eater)}
+                            [/then]
+                            [else]
+                                {VARIABLE_OP spawn_type rand (Corrupted Elvish Fighter,Corrupted Elvish Scout,Corrupted Elvish Hero,Corrupted Elvish Captain,Spell Eater)}
+                            [/else]
+                        [/if]
+                        {VARIABLE_OP spawn_x rand (51..71)}
+                        {VARIABLE_OP spawn_y rand (72..83)}
+                        {GENERIC_UNIT 8 $spawn_type $spawn_x $spawn_y}
+                    [/then]
+                [/if]
+                {VARIABLE_OP did_spawn rand "1..$spawn_chance"}
+                [if]
+                    [variable]
+                        name=did_spawn
+                        equals=1
+                    [/variable]
+                    [then]
+                        [if]
+                            [variable]
+                                name=difficulty.overall
+                                greater_than=2300
+                            [/variable]
+                            [then]
+                                {VARIABLE_OP spawn_type rand (Corrupted Naga Fighter,Corrupted Naga Warrior,Corrupted Naga Myrmidon)}
+                            [/then]
+                            [else]
+                                {VARIABLE_OP spawn_type rand (Corrupted Naga Fighter,Corrupted Naga Warrior)}
+                            [/else]
+                        [/if]
+                        {VARIABLE_OP spawn_x rand (42..56)}
+                        {VARIABLE_OP spawn_y rand (1..10)}
+                        {GENERIC_UNIT 9 $spawn_type $spawn_x $spawn_y}
+                    [/then]
+                [/if]
+                {VARIABLE_OP did_spawn rand "1..$spawn_chance"}
+                [if]
+                    [variable]
+                        name=did_spawn
+                        equals=1
+                    [/variable]
+                    [then]
+                        [if]
+                            [variable]
+                                name=difficulty.overall
+                                greater_than=2800
+                            [/variable]
+                            [then]
+                                {VARIABLE_OP spawn_type rand (Bowman,Spearman,Heavy Infantryman,Cavalryman,Horseman,Dark Adept,Longbowman,Swordsman,Javelineer,Pikeman,Shock Trooper,Dragoon,Knight,Lancer,Dark Sorcerer)}
+                            [/then]
+                            [else]
+                                {VARIABLE_OP spawn_type rand (Bowman,Spearman,Heavy Infantryman,Cavalryman,Horseman,Dark Adept)}
+                            [/else]
+                        [/if]
+                        {VARIABLE_OP spawn_x rand (6..19)}
+                        {VARIABLE_OP spawn_y rand (33..42)}
+                        [unit]
+                            type=$spawn_type
+                            x,y=$spawn_x,$spawn_y
+                            side=9
+                            to_variable=blackening_store
+                            generate_name=yes
+                            random_traits=yes
+                            random_gender=yes
+                        [/unit]
+                        {MAKE_BLACK_SOUL}
+                        [clear_variable]
+                            name=blackening_store
+                        [/clear_variable]
+                    [/then]
+                [/if]
+            [/then]
+        [/if]
+    [/event]
+    {RESET_FREE_SPAWNS 1}
+    
 [/scenario]
 #undef A2BOSSES_KILL_CHECK
