--- a/scenarios/HotS3.cfg
+++ b/scenarios/HotS3.cfg
@@ -932,5 +932,193 @@
             [/then]
         [/if]
     [/event]
+    
+    #Additional constant 1 unit spawns
+    [event]
+        name=turn refresh
+        first_time_only=no
+        [if]
+            [variable]
+                name=difficulty.overall
+                greater_than=300
+            [/variable]
+            [then]
+                {VARIABLE spawn_chance 8}
+                [if]
+                    [variable]
+                        name=difficulty.overall
+                        greater_than=700
+                    [/variable]
+                    [then]
+                        {VARIABLE_OP spawn_chance sub 1}
+                    [/then]
+                [/if]
+                [if]
+                    [variable]
+                        name=difficulty.overall
+                        greater_than=1100
+                    [/variable]
+                    [then]
+                        {VARIABLE_OP spawn_chance sub 1}
+                    [/then]
+                [/if]
+                [if]
+                    [variable]
+                        name=difficulty.overall
+                        greater_than=1500
+                    [/variable]
+                    [then]
+                        {VARIABLE_OP spawn_chance sub 1}
+                    [/then]
+                [/if]
+                [if]
+                    [variable]
+                         name=difficulty.overall
+                         greater_than=2200
+                    [/variable]
+                    [then]
+                        {VARIABLE_OP spawn_chance sub 1}
+                    [/then]
+                [/if]
+                [if]
+                    [variable]
+                        name=difficulty.overall
+                        greater_than=3000
+                    [/variable]
+                    [then]
+                        {VARIABLE_OP spawn_chance sub 1}
+                    [/then]
+                [/if]
+                [if]
+                    [variable]
+                        name=difficulty.overall
+                        greater_than=4000
+                    [/variable]
+                    [then]
+                        {VARIABLE_OP spawn_chance sub 1}
+                    [/then]
+                [/if]
+                [if]
+                    [variable]
+                        name=difficulty.overall
+                        greater_than=5000
+                    [/variable]
+                    [then]
+                        {VARIABLE_OP spawn_chance sub 1}
+                    [/then]
+                [/if]
+                {VARIABLE_OP did_spawn rand "1..$spawn_chance"}
+                [if]
+                    [variable]
+                        name=did_spawn
+                        equals=1
+                    [/variable]
+                    [then]
+                        {VARIABLE_OP spawn_type rand (Bowman,Spearman,Heavy Infantryman,Cavalryman,Horseman,Dark Adept)}
+                        {VARIABLE_OP spawn_x rand (17..20)}
+                        {VARIABLE_OP spawn_y rand (3..6)}
+                        [unit]
+                            type=$spawn_type
+                            x,y=$spawn_x,$spawn_y
+                            side=8
+                            to_variable=blackening_store
+                            generate_name=yes
+                            random_traits=yes
+                            random_gender=yes
+                        [/unit]
+                        {MAKE_BLACK_SOUL}
+                        [clear_variable]
+                            name=blackening_store
+                            [/clear_variable]
+                        [/then]
+                [/if]
+                {VARIABLE_OP did_spawn rand "1..$spawn_chance"}
+                [if]
+                    [variable]
+                        name=did_spawn
+                        equals=1
+                    [/variable]
+                    [then]
+                        [if]
+                            [variable]
+                                name=difficulty.overall
+                                greater_than=3500
+                            [/variable]
+                            [then]
+                                {VARIABLE spawn_type Demon}
+                            [/then]
+                            [else]
+                                {VARIABLE_OP spawn_type rand (Demon Warrior,Demon,Demon)}
+                            [/else]
+                        [/if]
+                        {VARIABLE_OP spawn_x rand (31..39)}
+                        {VARIABLE_OP spawn_y rand (49..54)}
+                        {GENERIC_UNIT 7 $spawn_type $spawn_x $spawn_y}
+                    [/then]
+                [/if]
+                {VARIABLE_OP did_spawn rand "1..$spawn_chance"}
+                [if]
+                    [variable]
+                        name=did_spawn
+                        equals=1
+                    [/variable]
+                    [then]
+                        [if]
+                            [variable]
+                                name=difficulty.overall
+                                greater_than=3700
+                            [/variable]
+                            [then]
+                                {VARIABLE spawn_type Demon}
+                            [/then]
+                            [else]
+                                {VARIABLE_OP spawn_type rand (Demon Warrior,Demon,Demon)}
+                            [/else]
+                        [/if]
+                        {VARIABLE_OP spawn_x rand (22..32)}
+                        {VARIABLE_OP spawn_y rand (78..86)}
+                        {GENERIC_UNIT 8 $spawn_type $spawn_x $spawn_y}
+                    [/then]
+                [/if]
+                {VARIABLE_OP did_spawn rand "1..$spawn_chance"}
+                [if]
+                    [variable]
+                        name=did_spawn
+                        equals=1
+                    [/variable]
+                    [then]
+                        [if]
+                            [variable]
+                                name=difficulty.overall
+                                greater_than=3800
+                            [/variable]
+                            [then]
+                                {VARIABLE_OP spawn_type rand (Bowman,Spearman,Heavy Infantryman,Cavalryman,Horseman,Dark Adept,Longbowman,Swordsman,Javelineer,Pikeman,Shock Trooper,Dragoon,Knight,Lancer,Dark Sorcerer)}
+                            [/then]
+                            [else]
+                                {VARIABLE_OP spawn_type rand (Bowman,Spearman,Heavy Infantryman,Cavalryman,Horseman,Dark Adept,Longbowman,Swordsman,Javelineer,Pikeman,Shock Trooper,Dragoon,Knight,Lancer,Dark Sorcerer,Master Bowman,Royal Guard,Halberdier,Grand Marshal,General,Iron Mauler,Cavalier,Grand Knight,Necromancer)}
+                            [/else]
+                        [/if]
+                        {VARIABLE_OP spawn_x rand (36..39)}
+                        {VARIABLE_OP spawn_y rand (88..91)}
+                        [unit]
+                            type=$spawn_type
+                            x,y=$spawn_x,$spawn_y
+                            side=7
+                            to_variable=blackening_store
+                            generate_name=yes
+                            random_traits=yes
+                            random_gender=yes
+                        [/unit]
+                        {MAKE_BLACK_SOUL}
+                        [clear_variable]
+                            name=blackening_store
+                        [/clear_variable]
+                    [/then]
+                [/if]
+            [/then]
+        [/if]
+    [/event]
+    {RESET_FREE_SPAWNS 1}
 [/scenario]
 
