--- a/utils/spawn_utils.cfg
+++ b/utils/spawn_utils.cfg
@@ -15,7 +15,7 @@
             {VARIABLE inserted_event.filter.filter_location.x "$($spawn_list.spawn[$k].x-$spawn_list.spawn[$k].range)-$($spawn_list.spawn[$k].x*1+$spawn_list.spawn[$k].range)"}
         [/else]
     [/if]
-    {VARIABLE checked "$($spawn_list.spawn[$k].y-$spawn_list.spawn[$y].range)"}
+    {VARIABLE checked "$($spawn_list.spawn[$k].y-$spawn_list.spawn[$k].range)"}
     [if]
         [variable]
             name=checked
@@ -532,4 +532,40 @@
         [/while]
         {CLEAR_VARIABLE spawn_count,spawn_type,spawn}
     [/event]
+#enddef
+
+#define RESET_FREE_SPAWNS CNT
+[event]
+    name=turn refresh
+    first_time_only=no
+    [if]
+        [variable]
+            name=side_number
+            equals=1
+        [/variable]
+        [then]
+           {VARIABLE respawn_count 1}
+           [while]
+              [variable]
+                 name=respawn_count
+                 less_than_equal_to={CNT}
+              [/variable]
+              [do]
+                 {VARIABLE_OP k rand "1..$spawn_list.spawn.length"}
+                 [if]
+                    [variable]
+                       name=spawn_list.spawn.free
+                       equals=1
+                    [/variable]
+                    [then]
+                       {PLACE_SPAWN}
+                    [/then]
+                 [/if]
+                 {VARIABLE_OP respawn_count add 1}
+              [/do]
+           [/while]
+           {CLEAR_VARIABLE respawn_count,can_spawn,k}
+        [/then]
+    [/if]
+[/event]
 #enddef
