--- a/scenarios/HotS0.cfg
+++ b/scenarios/HotS0.cfg
@@ -763,5 +763,96 @@ There is <b>no upkeep and no gold gain, although it shows differently</b>, you c
 
     {HOTOW_ESSENTIALS_NO_INCOME}
 
+    #Additional constant 1 unit spawn
+    [event]
+        name=turn refresh
+        first_time_only=no
+        [if]
+            [variable]
+                name=difficulty.overall
+                greater_than=100
+            [/variable]
+            [then]
+                {VARIABLE spawn_chance 8}
+                [if]
+                    [variable]
+                        name=difficulty.overall
+                        greater_than=300
+                    [/variable]
+                    [then]
+                        {VARIABLE_OP spawn_chance sub 1}
+                    [/then]
+                [/if]
+                [if]
+                    [variable]
+                        name=difficulty.overall
+                        greater_than=500
+                    [/variable]
+                    [then]
+                        {VARIABLE_OP spawn_chance sub 1}
+                    [/then]
+                [/if]
+                [if]
+                    [variable]
+                        name=difficulty.overall
+                        greater_than=700
+                    [/variable]
+                    [then]
+                        {VARIABLE_OP spawn_chance sub 1}
+                    [/then]
+                [/if]
+                [if]
+                    [variable]
+                         name=difficulty.overall
+                         greater_than=900
+                    [/variable]
+                    [then]
+                        {VARIABLE_OP spawn_chance sub 1}
+                    [/then]
+                [/if]
+                [if]
+                    [variable]
+                        name=difficulty.overall
+                        greater_than=1200
+                    [/variable]
+                    [then]
+                        {VARIABLE_OP spawn_chance sub 1}
+                    [/then]
+                [/if]
+                [if]
+                    [variable]
+                        name=difficulty.overall
+                        greater_than=1500
+                    [/variable]
+                    [then]
+                        {VARIABLE_OP spawn_chance sub 1}
+                    [/then]
+                [/if]
+                [if]
+                    [variable]
+                        name=difficulty.overall
+                        greater_than=2000
+                    [/variable]
+                    [then]
+                        {VARIABLE_OP spawn_chance sub 1}
+                    [/then]
+                [/if]
+                {VARIABLE_OP did_spawn rand "1..$spawn_chance"}
+                [if]
+                    [variable]
+                        name=did_spawn
+                        equals=1
+                    [/variable]
+                    [then]
+                        {VARIABLE_OP spawn_type rand (Giant Rat,Giant Scorpion,Giant Spider,Wolf,Direwolf,Great Wolf)}
+                        {VARIABLE_OP spawn_x rand (83..110)}
+                        {VARIABLE_OP spawn_y rand (55..70)}
+                        {GENERIC_UNIT 7 $spawn_type $spawn_x $spawn_y}
+                        [/then]
+                [/if]
+            [/then]
+        [/if]
+    [/event]
+    {RESET_FREE_SPAWNS 1}
 [/scenario]
 #undef BOSSES_KILL_CHECK
