Ice guard recruiting ice wraiths

--- a/scenarios/HotS1.cfg
+++ b/scenarios/HotS1.cfg
@@ -238,7 +238,7 @@
         type=Ice Dragon
         id=Ice Guardian
         name= _ "Ice Guardian"
-        recruit=Yeti,Ice Spirit
+        recruit=Yeti,Ice Spirit,Ice Wraith
         disallow_observers=yes
         controller="ai"
         gold=0
