--- a/scenarios/HotS3.cfg
+++ b/scenarios/HotS3.cfg
@@ -938,6 +938,13 @@
         name=turn refresh
         first_time_only=no
         [if]
+            
+                [variable]
+                    name=side_number
+                    less_than=6
+                [/variable]
+            [then]
+        [if]
             [variable]
                 name=difficulty.overall
                 greater_than=300
@@ -1118,6 +1125,8 @@
                 [/if]
             [/then]
         [/if]
+        [/then]
+    [/if]
     [/event]
     {RESET_FREE_SPAWNS 1}
 [/scenario]
