--- a/scenarios/HotS1.cfg
+++ b/scenarios/HotS1.cfg
@@ -1019,6 +1019,12 @@
         name=turn refresh
         first_time_only=no
         [if]
+                [variable]
+                    name=side_number
+                    less_than=6
+                [/variable]
+            [then]
+        [if]
             [variable]
                 name=difficulty.overall
                 greater_than=100
@@ -1162,6 +1168,8 @@
                 [/if]
             [/then]
         [/if]
+        [/then]
+    [/if]
     [/event]
     {RESET_FREE_SPAWNS 1}
 
