--- a/scenarios/HotS2.cfg
+++ b/scenarios/HotS2.cfg
@@ -987,6 +987,13 @@
         name=turn refresh
         first_time_only=no
         [if]
+            
+                [variable]
+                    name=side_number
+                    less_than=6
+                [/variable]
+            [then]
+        [if]
             [variable]
                 name=difficulty.overall
                 greater_than=200
@@ -1155,6 +1162,8 @@
                 [/if]
             [/then]
         [/if]
+        [/then]
+    [/if]
     [/event]
     {RESET_FREE_SPAWNS 1}
     
