Fix spawn and disable Ice Wraith for now (until it will be in stable LotI)

--- a/scenarios/HotS1.cfg
+++ b/scenarios/HotS1.cfg
@@ -238,7 +238,7 @@
         type=Ice Dragon
         id=Ice Guardian
         name= _ "Ice Guardian"
-        recruit=Yeti,Ice Spirit,Ice Wraith
+        recruit=Yeti,Ice Spirit #,Ice Wraith
         disallow_observers=yes
         controller="ai"
         gold=0
@@ -1155,7 +1155,7 @@
                                 greater_than=1700
                             [/variable]
                             [then]
-                                {VARIABLE_OP spawn_type rand (Troll Warior,Troll Shaman,Troll Whelp,Great Troll)}
+                                {VARIABLE_OP spawn_type rand (Troll Warrior,Troll Shaman,Troll Whelp,Great Troll)}
                             [/then]
                             [else]
                                 {VARIABLE_OP spawn_type rand (Troll,Troll Shaman,Troll Whelp)}
