Reenable Ice Wraith, as it's in stable now

--- a/scenarios/HotS1.cfg
+++ b/scenarios/HotS1.cfg
@@ -217,7 +217,7 @@
         faction=Custom
         gold=0
         type=Corrupted Elvish Champion
-        recruit=Corrupted Elvish Fighter,Corrupted Elvish Scout, Spell Eater
+        recruit=Corrupted Elvish Fighter,Corrupted Elvish Scout,Spell Eater
         id=Forest Guardian
         name= _ "Forest Guardian"
         disallow_observers=yes
@@ -238,7 +238,7 @@
         type=Ice Dragon
         id=Ice Guardian
         name= _ "Ice Guardian"
-        recruit=Yeti,Ice Spirit #,Ice Wraith
+        recruit=Yeti,Ice Spirit,Ice Wraith
         disallow_observers=yes
         controller="ai"
         gold=0
