Extra advancements + difficulties

--- a/_main.cfg
+++ b/_main.cfg
@@ -3,6 +3,7 @@
     name="wesnoth-hotow"
     path="data/add-ons/Hords_of_the_Other_World/translations"
 [/textdomain]
+{~add-ons/Legend_of_the_Invincibles/extra_advancements.cfg}
 [campaign]
 	id=Hordes_of_the_Other_World
 	name = _ "Hordes of the Other World"
@@ -13,7 +14,7 @@
 	first_scenario = Shadowlord_prelude
 	allow_era_choice = no
 	require_campaign = yes
-	min_players=5
+	min_players=1
 	max_players=5
 	icon=units/undead/spectre.png~TC(1,magenta)
 	image=portraits/undead/spectre.png
@@ -24,6 +25,25 @@ After closing the portal into the world of the dead and defeating the uprising o
 Difficulty is adjustable, for 5 players. Uses regular units (side 1 is always Efraim and undead, side 2 Lethalia and elves, side 3 Argan and humans, side 4 Stormrider and other humans and side 5 is always Delly and outlaws).
 
 (5 scenarios)"
+    [difficulty]
+        define=EASY
+        image=items/bones.png
+        label=_"Undertaker"
+        description=_"Easy"
+    [/difficulty]
+    [difficulty]
+        define=NORMAL
+        image=items/burial.png
+        label=_"Necromancer"
+        description=_"Hard"
+        default=yes
+    [/difficulty]
+    [difficulty]
+        define=HARD
+        image=items/bonestack.png
+        label=_"Supreme Lich Overlord"
+        description=_"Nightmare"
+    [/difficulty]
 	[about]
 		title= _ "Original idea of this campaign, author of Legend of the Invincibles"
 		[entry]
@@ -66,6 +86,7 @@ Difficulty is adjustable, for 5 players. Uses regular units (side 1 is always Ef
 			name= "Murilo Carvalho"
 		[/entry]
 	[/about]
+	{LOTI_EXTRA_ADVANCEMENT_LINES}
 [/campaign]
 
 #ifdef _MP_CAMPAIGN_HOTOW
