next_scenario set

--- a/scenarios/HotS0.cfg
+++ b/scenarios/HotS0.cfg
@@ -7,6 +7,7 @@
     experience_modifier="60"
     map_data="{~add-ons/Hordes_of_the_Other_World/maps/HotS0.map}"
     victory_when_enemies_defeated=no
+    next_scenario=Shadowlord_cave
     fog=no
     {DEFAULT_MUSIC_PLAYLIST}
     {DUSK}
