--- a/scenarios/HotS3.cfg
+++ b/scenarios/HotS3.cfg
@@ -7,6 +7,7 @@
     experience_modifier="60"
     map_data="{~add-ons/Hordes_of_the_Other_World/maps/HotS3.map}"
     victory_when_enemies_defeated=no
+    next_scenario=Shadowlord_finale
     fog=no
     {SCENARIO_MUSIC "suspense.ogg"}
     {EXTRA_SCENARIO_MUSIC "into_the_shadows.ogg"}
