--- a/scenarios/HotS1.cfg
+++ b/scenarios/HotS1.cfg
@@ -7,6 +7,7 @@
     experience_modifier="60"
     map_data="{~add-ons/Hordes_of_the_Other_World/maps/HotS1.map}"
     victory_when_enemies_defeated=no
+    next_scenario=Shadowlord_plains
     fog=no
     {SCENARIO_MUSIC "into_the_shadows.ogg"}
     {EXTRA_SCENARIO_MUSIC "knalgan_theme.ogg"}
