--- a/scenarios/HotS2.cfg
+++ b/scenarios/HotS2.cfg
@@ -7,6 +7,7 @@
     experience_modifier="60"
     map_data="{~add-ons/Hordes_of_the_Other_World/maps/HotS2.map}"
     victory_when_enemies_defeated=no
+    next_scenario=Shadowlord_fortress
     fog=no
     {SCENARIO_MUSIC "snowfall.ogg"}
     {EXTRA_SCENARIO_MUSIC "sad.ogg"}
