Correct icon image and new units in spawns

--- a/_main.cfg
+++ b/_main.cfg
@@ -16,8 +16,8 @@
 	require_campaign = yes
 	min_players=1
 	max_players=5
-	icon=units/undead/spectre.png~TC(1,magenta)
-	image=portraits/undead/spectre.png
+	icon=units/undead-spirit/spectre.png~TC(1,magenta)
+	image=portraits/undead/spectre.webp
 	description = "This is a remake of a multiplayer scenario designed to be a multiplayer version of the Legend of the Invincibles campaign.
 
 After closing the portal into the world of the dead and defeating the uprising of dragons, a new thread has arisen. While the barrier between the worlds was still faint, a spirit of unimaginable power, known only as Shadowlord, opened a portal from the world of the dead into Irdya, and started threatening every living soul with his immense power. As the darkness spread into the known world, five heroes (well known from chapter 3) and their brave soldiers came to stop this danger.
