--- a/utils/spawn_list.cfg
+++ b/utils/spawn_list.cfg
@@ -122,7 +122,7 @@
 #define A1_LESSER_UNDEAD_SPAWN X Y NUMBER
     [spawn]
         range=25
-        spawn_type=Walking Corpse,Soulless,Skeleton,Skeleton Archer,Ghoul,Ghost,Walking Corpse,Soulless,Skeleton,Skeleton Archer,Ghoul,Ghost,Revenant,Bone Shooter,Necrophage,Deathblade,Chocobone,Shadow,Wraith
+        spawn_type=Walking Corpse,Soulless,Skeleton,Skeleton Archer,Ghoul,Ghost,Walking Corpse,Soulless,Skeleton,Skeleton Archer,Ghoul,Ghost,Revenant,Bone Shooter,Necrophage,Deathblade,Chocobone,Shadow,Wraith,Skeleton Rider,Death Squire
         increment=2
         act=1
         number={NUMBER}
@@ -134,7 +134,7 @@
 #define A1_UNDEAD_SPAWN X Y NUMBER
     [spawn]
         range=25
-        spawn_type=Walking Corpse,Soulless,Skeleton,Skeleton Archer,Ghoul,Ghost,Revenant,Bone Shooter,Necrophage,Deathblade,Chocobone,Shadow,Wraith,Death Knight,Grim Knight,Banebow,Ghast,Draug,Nightgaunt,Spectre
+        spawn_type=Walking Corpse,Soulless,Skeleton,Skeleton Archer,Ghoul,Ghost,Revenant,Bone Shooter,Necrophage,Deathblade,Chocobone,Shadow,Wraith,Death Knight,Grim Knight,Banebow,Ghast,Draug,Nightgaunt,Spectre,Bone Knight,Skeleton Rider,Death Squire
         increment=1
         act=1
         number={NUMBER}
@@ -146,7 +146,7 @@
 #define A1_GREATER_UNDEAD_SPAWN X Y NUMBER
     [spawn]
         range=25
-        spawn_type=Soulless,Revenant,Bone Shooter,Necrophage,Deathblade,Chocobone,Shadow,Wraith,Death Knight,Spectre,Ghast,Draug,Nightgaunt,Grim Knight,Banebow
+        spawn_type=Soulless,Revenant,Bone Shooter,Necrophage,Deathblade,Chocobone,Shadow,Wraith,Death Knight,Spectre,Ghast,Draug,Nightgaunt,Grim Knight,Banebow,Bone Knight,Death Squire
         increment=1
         act=1
         number={NUMBER}
@@ -170,7 +170,7 @@
 #define A2_SAURIAN_SPAWN X Y NUMBER
     [spawn]
         range=25
-        spawn_type=Saurian Skirmisher,Saurian Augur,Saurian Ambusher,Saurian Flanker,Saurian Oracle,Saurian Soothsayer
+        spawn_type=Saurian Skirmisher,Saurian Augur,Saurian Ambusher,Saurian Flanker,Saurian Oracle,Saurian Soothsayer,Saurian Spearthrower,Saurian Javelineer,Saurian Prophet,Saurian Seer
         increment=2
         act=2
         number={NUMBER}
@@ -182,7 +182,7 @@
 #define A2_UNDEAD_SPAWN X Y NUMBER
     [spawn]
         range=25
-        spawn_type=Soulless,Revenant,Bone Shooter,Necrophage,Deathblade,Chocobone,Shadow,Wraith,Death Knight,Spectre,Ghast,Draug,Nightgaunt,Grim Knight,Banebow
+        spawn_type=Soulless,Revenant,Bone Shooter,Necrophage,Deathblade,Chocobone,Shadow,Wraith,Death Knight,Spectre,Ghast,Draug,Nightgaunt,Grim Knight,Banebow,Bone Knight,Death Squire
         increment=2
         act=2
         number={NUMBER}
